@@ -12,6 +12,7 @@ class V2World {
 		void				init(string V2Loc);
 		void				addPotentialCountries(ifstream &countriesMapping, string V2Loc);
 		vector<string>	getPotentialTags(); 
+		void				sortCountries(const vector<string>& order);
 		void				convertCountries(EU3World sourceWorld, countryMapping countryMap, cultureMapping cultureMap, religionMapping religionMap, governmentMapping governmentMap);
 		void				convertProvinces(EU3World sourceWorld, provinceMapping provinceMap, countryMapping countryMap, cultureMapping cultureMap, religionMapping religionMap);
 		void				addUnions(unionMapping unionMap);
